etapa4/y.output
   0  $accept : program $end

   1  program : declist

   2  declist : dec declist
   3          |

   4  dec : funcdec
   5      | vardec

   6  vardec : TK_IDENTIFIER ':' vartypeandvalue ';'

   7  vartypeandvalue : vartype LIT_CHAR
   8                  | vartype LIT_INTEGER
   9                  | vartype LIT_REAL
  10                  | vartype '[' LIT_INTEGER ']' intlist
  11                  | vartype '[' LIT_INTEGER ']' charlist
  12                  | vartype '[' LIT_INTEGER ']' floatlist
  13                  | vartype '[' LIT_INTEGER ']'

  14  intlist : LIT_INTEGER intlist
  15          | LIT_INTEGER

  16  charlist : LIT_CHAR charlist
  17           | LIT_CHAR

  18  floatlist : LIT_REAL floatlist
  19            | LIT_REAL

  20  funcdec : vartype TK_IDENTIFIER '(' parameters ')' funcbody ';'

  21  parameters : paramlist
  22             |

  23  paramlist : param ',' paramlist
  24            | param

  25  param : vartype TK_IDENTIFIER

  26  vartype : KW_BYTE
  27          | KW_SHORT
  28          | KW_LONG
  29          | KW_FLOAT
  30          | KW_DOUBLE

  31  funcbody : cmd

  32  cmdlist : cmdlist cmd ';'
  33          |

  34  cmd : atrib
  35      | '{' cmdlist '}'
  36      | KW_READ TK_IDENTIFIER
  37      | KW_PRINT printlist
  38      | KW_RETURN expr
  39      | control
  40      |

  41  printlist : printelement printlist
  42            | printelement

  43  printelement : LIT_STRING
  44               | expr

  45  control : KW_WHEN '(' expr ')' KW_THEN cmd
  46          | KW_WHEN '(' expr ')' KW_THEN cmd KW_ELSE cmd
  47          | KW_WHILE '(' expr ')' cmd
  48          | KW_FOR '(' TK_IDENTIFIER '=' expr KW_TO expr ')' cmd

  49  atrib : TK_IDENTIFIER '=' expr
  50        | TK_IDENTIFIER '#' expr '=' expr

  51  expr : '(' expr ')'
  52       | TK_IDENTIFIER
  53       | TK_IDENTIFIER '[' expr ']'
  54       | TK_IDENTIFIER '(' args ')'
  55       | LIT_INTEGER
  56       | LIT_CHAR
  57       | LIT_REAL
  58       | expr OPERATOR_LE expr
  59       | expr OPERATOR_GE expr
  60       | expr OPERATOR_EQ expr
  61       | expr OPERATOR_NE expr
  62       | expr OPERATOR_AND expr
  63       | expr OPERATOR_OR expr
  64       | expr '*' expr
  65       | expr '+' expr
  66       | expr '-' expr
  67       | expr '/' expr
  68       | expr '<' expr
  69       | expr '>' expr

  70  args : expr argstail
  71       |

  72  argstail : ',' expr argstail
  73           |

state 0
	$accept : . program $end  (0)
	declist : .  (3)

	KW_BYTE  shift 1
	KW_SHORT  shift 2
	KW_LONG  shift 3
	KW_FLOAT  shift 4
	KW_DOUBLE  shift 5
	TK_IDENTIFIER  shift 6
	$end  reduce 3

	program  goto 7
	declist  goto 8
	dec  goto 9
	vardec  goto 10
	funcdec  goto 11
	vartype  goto 12


state 1
	vartype : KW_BYTE .  (26)

	.  reduce 26


state 2
	vartype : KW_SHORT .  (27)

	.  reduce 27


state 3
	vartype : KW_LONG .  (28)

	.  reduce 28


state 4
	vartype : KW_FLOAT .  (29)

	.  reduce 29


state 5
	vartype : KW_DOUBLE .  (30)

	.  reduce 30


state 6
	vardec : TK_IDENTIFIER . ':' vartypeandvalue ';'  (6)

	':'  shift 13
	.  error


state 7
	$accept : program . $end  (0)

	$end  accept


state 8
	program : declist .  (1)

	.  reduce 1


state 9
	declist : dec . declist  (2)
	declist : .  (3)

	KW_BYTE  shift 1
	KW_SHORT  shift 2
	KW_LONG  shift 3
	KW_FLOAT  shift 4
	KW_DOUBLE  shift 5
	TK_IDENTIFIER  shift 6
	$end  reduce 3

	declist  goto 14
	dec  goto 9
	vardec  goto 10
	funcdec  goto 11
	vartype  goto 12


state 10
	dec : vardec .  (5)

	.  reduce 5


state 11
	dec : funcdec .  (4)

	.  reduce 4


state 12
	funcdec : vartype . TK_IDENTIFIER '(' parameters ')' funcbody ';'  (20)

	TK_IDENTIFIER  shift 15
	.  error


state 13
	vardec : TK_IDENTIFIER ':' . vartypeandvalue ';'  (6)

	KW_BYTE  shift 1
	KW_SHORT  shift 2
	KW_LONG  shift 3
	KW_FLOAT  shift 4
	KW_DOUBLE  shift 5
	.  error

	vartypeandvalue  goto 16
	vartype  goto 17


state 14
	declist : dec declist .  (2)

	.  reduce 2


state 15
	funcdec : vartype TK_IDENTIFIER . '(' parameters ')' funcbody ';'  (20)

	'('  shift 18
	.  error


state 16
	vardec : TK_IDENTIFIER ':' vartypeandvalue . ';'  (6)

	';'  shift 19
	.  error


state 17
	vartypeandvalue : vartype . LIT_CHAR  (7)
	vartypeandvalue : vartype . LIT_INTEGER  (8)
	vartypeandvalue : vartype . LIT_REAL  (9)
	vartypeandvalue : vartype . '[' LIT_INTEGER ']' intlist  (10)
	vartypeandvalue : vartype . '[' LIT_INTEGER ']' charlist  (11)
	vartypeandvalue : vartype . '[' LIT_INTEGER ']' floatlist  (12)
	vartypeandvalue : vartype . '[' LIT_INTEGER ']'  (13)

	LIT_INTEGER  shift 20
	LIT_REAL  shift 21
	LIT_CHAR  shift 22
	'['  shift 23
	.  error


state 18
	funcdec : vartype TK_IDENTIFIER '(' . parameters ')' funcbody ';'  (20)
	parameters : .  (22)

	KW_BYTE  shift 1
	KW_SHORT  shift 2
	KW_LONG  shift 3
	KW_FLOAT  shift 4
	KW_DOUBLE  shift 5
	')'  reduce 22

	vartype  goto 24
	parameters  goto 25
	paramlist  goto 26
	param  goto 27


state 19
	vardec : TK_IDENTIFIER ':' vartypeandvalue ';' .  (6)

	.  reduce 6


state 20
	vartypeandvalue : vartype LIT_INTEGER .  (8)

	.  reduce 8


state 21
	vartypeandvalue : vartype LIT_REAL .  (9)

	.  reduce 9


state 22
	vartypeandvalue : vartype LIT_CHAR .  (7)

	.  reduce 7


state 23
	vartypeandvalue : vartype '[' . LIT_INTEGER ']' intlist  (10)
	vartypeandvalue : vartype '[' . LIT_INTEGER ']' charlist  (11)
	vartypeandvalue : vartype '[' . LIT_INTEGER ']' floatlist  (12)
	vartypeandvalue : vartype '[' . LIT_INTEGER ']'  (13)

	LIT_INTEGER  shift 28
	.  error


state 24
	param : vartype . TK_IDENTIFIER  (25)

	TK_IDENTIFIER  shift 29
	.  error


state 25
	funcdec : vartype TK_IDENTIFIER '(' parameters . ')' funcbody ';'  (20)

	')'  shift 30
	.  error


state 26
	parameters : paramlist .  (21)

	.  reduce 21


state 27
	paramlist : param . ',' paramlist  (23)
	paramlist : param .  (24)

	','  shift 31
	')'  reduce 24


state 28
	vartypeandvalue : vartype '[' LIT_INTEGER . ']' intlist  (10)
	vartypeandvalue : vartype '[' LIT_INTEGER . ']' charlist  (11)
	vartypeandvalue : vartype '[' LIT_INTEGER . ']' floatlist  (12)
	vartypeandvalue : vartype '[' LIT_INTEGER . ']'  (13)

	']'  shift 32
	.  error


state 29
	param : vartype TK_IDENTIFIER .  (25)

	.  reduce 25


state 30
	funcdec : vartype TK_IDENTIFIER '(' parameters ')' . funcbody ';'  (20)
	cmd : .  (40)

	KW_WHEN  shift 33
	KW_WHILE  shift 34
	KW_FOR  shift 35
	KW_READ  shift 36
	KW_RETURN  shift 37
	KW_PRINT  shift 38
	TK_IDENTIFIER  shift 39
	'{'  shift 40
	';'  reduce 40

	funcbody  goto 41
	cmd  goto 42
	atrib  goto 43
	control  goto 44


state 31
	paramlist : param ',' . paramlist  (23)

	KW_BYTE  shift 1
	KW_SHORT  shift 2
	KW_LONG  shift 3
	KW_FLOAT  shift 4
	KW_DOUBLE  shift 5
	.  error

	vartype  goto 24
	paramlist  goto 45
	param  goto 27


state 32
	vartypeandvalue : vartype '[' LIT_INTEGER ']' . intlist  (10)
	vartypeandvalue : vartype '[' LIT_INTEGER ']' . charlist  (11)
	vartypeandvalue : vartype '[' LIT_INTEGER ']' . floatlist  (12)
	vartypeandvalue : vartype '[' LIT_INTEGER ']' .  (13)

	LIT_INTEGER  shift 46
	LIT_REAL  shift 47
	LIT_CHAR  shift 48
	';'  reduce 13

	intlist  goto 49
	floatlist  goto 50
	charlist  goto 51


state 33
	control : KW_WHEN . '(' expr ')' KW_THEN cmd  (45)
	control : KW_WHEN . '(' expr ')' KW_THEN cmd KW_ELSE cmd  (46)

	'('  shift 52
	.  error


state 34
	control : KW_WHILE . '(' expr ')' cmd  (47)

	'('  shift 53
	.  error


state 35
	control : KW_FOR . '(' TK_IDENTIFIER '=' expr KW_TO expr ')' cmd  (48)

	'('  shift 54
	.  error


state 36
	cmd : KW_READ . TK_IDENTIFIER  (36)

	TK_IDENTIFIER  shift 55
	.  error


state 37
	cmd : KW_RETURN . expr  (38)

	TK_IDENTIFIER  shift 56
	LIT_INTEGER  shift 57
	LIT_REAL  shift 58
	LIT_CHAR  shift 59
	'('  shift 60
	.  error

	expr  goto 61


state 38
	cmd : KW_PRINT . printlist  (37)

	TK_IDENTIFIER  shift 56
	LIT_INTEGER  shift 57
	LIT_REAL  shift 58
	LIT_CHAR  shift 59
	LIT_STRING  shift 62
	'('  shift 60
	.  error

	printlist  goto 63
	expr  goto 64
	printelement  goto 65


state 39
	atrib : TK_IDENTIFIER . '=' expr  (49)
	atrib : TK_IDENTIFIER . '#' expr '=' expr  (50)

	'='  shift 66
	'#'  shift 67
	.  error


state 40
	cmd : '{' . cmdlist '}'  (35)
	cmdlist : .  (33)

	.  reduce 33

	cmdlist  goto 68


state 41
	funcdec : vartype TK_IDENTIFIER '(' parameters ')' funcbody . ';'  (20)

	';'  shift 69
	.  error


state 42
	funcbody : cmd .  (31)

	.  reduce 31


state 43
	cmd : atrib .  (34)

	.  reduce 34


state 44
	cmd : control .  (39)

	.  reduce 39


state 45
	paramlist : param ',' paramlist .  (23)

	.  reduce 23


state 46
	intlist : LIT_INTEGER . intlist  (14)
	intlist : LIT_INTEGER .  (15)

	LIT_INTEGER  shift 46
	';'  reduce 15

	intlist  goto 70


state 47
	floatlist : LIT_REAL . floatlist  (18)
	floatlist : LIT_REAL .  (19)

	LIT_REAL  shift 47
	';'  reduce 19

	floatlist  goto 71


state 48
	charlist : LIT_CHAR . charlist  (16)
	charlist : LIT_CHAR .  (17)

	LIT_CHAR  shift 48
	';'  reduce 17

	charlist  goto 72


state 49
	vartypeandvalue : vartype '[' LIT_INTEGER ']' intlist .  (10)

	.  reduce 10


state 50
	vartypeandvalue : vartype '[' LIT_INTEGER ']' floatlist .  (12)

	.  reduce 12


state 51
	vartypeandvalue : vartype '[' LIT_INTEGER ']' charlist .  (11)

	.  reduce 11


state 52
	control : KW_WHEN '(' . expr ')' KW_THEN cmd  (45)
	control : KW_WHEN '(' . expr ')' KW_THEN cmd KW_ELSE cmd  (46)

	TK_IDENTIFIER  shift 56
	LIT_INTEGER  shift 57
	LIT_REAL  shift 58
	LIT_CHAR  shift 59
	'('  shift 60
	.  error

	expr  goto 73


state 53
	control : KW_WHILE '(' . expr ')' cmd  (47)

	TK_IDENTIFIER  shift 56
	LIT_INTEGER  shift 57
	LIT_REAL  shift 58
	LIT_CHAR  shift 59
	'('  shift 60
	.  error

	expr  goto 74


state 54
	control : KW_FOR '(' . TK_IDENTIFIER '=' expr KW_TO expr ')' cmd  (48)

	TK_IDENTIFIER  shift 75
	.  error


state 55
	cmd : KW_READ TK_IDENTIFIER .  (36)

	.  reduce 36


56: shift/reduce conflict (shift 77, reduce 52) on '('
state 56
	expr : TK_IDENTIFIER .  (52)
	expr : TK_IDENTIFIER . '[' expr ']'  (53)
	expr : TK_IDENTIFIER . '(' args ')'  (54)

	'['  shift 76
	'('  shift 77
	KW_ELSE  reduce 52
	KW_TO  reduce 52
	OPERATOR_LE  reduce 52
	OPERATOR_GE  reduce 52
	OPERATOR_EQ  reduce 52
	OPERATOR_NE  reduce 52
	OPERATOR_AND  reduce 52
	OPERATOR_OR  reduce 52
	TK_IDENTIFIER  reduce 52
	LIT_INTEGER  reduce 52
	LIT_REAL  reduce 52
	LIT_CHAR  reduce 52
	LIT_STRING  reduce 52
	'<'  reduce 52
	'>'  reduce 52
	'-'  reduce 52
	'+'  reduce 52
	'*'  reduce 52
	'/'  reduce 52
	';'  reduce 52
	']'  reduce 52
	')'  reduce 52
	','  reduce 52
	'='  reduce 52


state 57
	expr : LIT_INTEGER .  (55)

	.  reduce 55


state 58
	expr : LIT_REAL .  (57)

	.  reduce 57


state 59
	expr : LIT_CHAR .  (56)

	.  reduce 56


state 60
	expr : '(' . expr ')'  (51)

	TK_IDENTIFIER  shift 56
	LIT_INTEGER  shift 57
	LIT_REAL  shift 58
	LIT_CHAR  shift 59
	'('  shift 60
	.  error

	expr  goto 78


state 61
	cmd : KW_RETURN expr .  (38)
	expr : expr . OPERATOR_LE expr  (58)
	expr : expr . OPERATOR_GE expr  (59)
	expr : expr . OPERATOR_EQ expr  (60)
	expr : expr . OPERATOR_NE expr  (61)
	expr : expr . OPERATOR_AND expr  (62)
	expr : expr . OPERATOR_OR expr  (63)
	expr : expr . '*' expr  (64)
	expr : expr . '+' expr  (65)
	expr : expr . '-' expr  (66)
	expr : expr . '/' expr  (67)
	expr : expr . '<' expr  (68)
	expr : expr . '>' expr  (69)

	OPERATOR_LE  shift 79
	OPERATOR_GE  shift 80
	OPERATOR_EQ  shift 81
	OPERATOR_NE  shift 82
	OPERATOR_AND  shift 83
	OPERATOR_OR  shift 84
	'<'  shift 85
	'>'  shift 86
	'-'  shift 87
	'+'  shift 88
	'*'  shift 89
	'/'  shift 90
	KW_ELSE  reduce 38
	';'  reduce 38


state 62
	printelement : LIT_STRING .  (43)

	.  reduce 43


state 63
	cmd : KW_PRINT printlist .  (37)

	.  reduce 37


state 64
	printelement : expr .  (44)
	expr : expr . OPERATOR_LE expr  (58)
	expr : expr . OPERATOR_GE expr  (59)
	expr : expr . OPERATOR_EQ expr  (60)
	expr : expr . OPERATOR_NE expr  (61)
	expr : expr . OPERATOR_AND expr  (62)
	expr : expr . OPERATOR_OR expr  (63)
	expr : expr . '*' expr  (64)
	expr : expr . '+' expr  (65)
	expr : expr . '-' expr  (66)
	expr : expr . '/' expr  (67)
	expr : expr . '<' expr  (68)
	expr : expr . '>' expr  (69)

	OPERATOR_LE  shift 79
	OPERATOR_GE  shift 80
	OPERATOR_EQ  shift 81
	OPERATOR_NE  shift 82
	OPERATOR_AND  shift 83
	OPERATOR_OR  shift 84
	'<'  shift 85
	'>'  shift 86
	'-'  shift 87
	'+'  shift 88
	'*'  shift 89
	'/'  shift 90
	KW_ELSE  reduce 44
	TK_IDENTIFIER  reduce 44
	LIT_INTEGER  reduce 44
	LIT_REAL  reduce 44
	LIT_CHAR  reduce 44
	LIT_STRING  reduce 44
	';'  reduce 44
	'('  reduce 44


state 65
	printlist : printelement . printlist  (41)
	printlist : printelement .  (42)

	TK_IDENTIFIER  shift 56
	LIT_INTEGER  shift 57
	LIT_REAL  shift 58
	LIT_CHAR  shift 59
	LIT_STRING  shift 62
	'('  shift 60
	KW_ELSE  reduce 42
	';'  reduce 42

	printlist  goto 91
	expr  goto 64
	printelement  goto 65


state 66
	atrib : TK_IDENTIFIER '=' . expr  (49)

	TK_IDENTIFIER  shift 56
	LIT_INTEGER  shift 57
	LIT_REAL  shift 58
	LIT_CHAR  shift 59
	'('  shift 60
	.  error

	expr  goto 92


state 67
	atrib : TK_IDENTIFIER '#' . expr '=' expr  (50)

	TK_IDENTIFIER  shift 56
	LIT_INTEGER  shift 57
	LIT_REAL  shift 58
	LIT_CHAR  shift 59
	'('  shift 60
	.  error

	expr  goto 93


state 68
	cmdlist : cmdlist . cmd ';'  (32)
	cmd : '{' cmdlist . '}'  (35)
	cmd : .  (40)

	KW_WHEN  shift 33
	KW_WHILE  shift 34
	KW_FOR  shift 35
	KW_READ  shift 36
	KW_RETURN  shift 37
	KW_PRINT  shift 38
	TK_IDENTIFIER  shift 39
	'{'  shift 40
	'}'  shift 94
	';'  reduce 40

	cmd  goto 95
	atrib  goto 43
	control  goto 44


state 69
	funcdec : vartype TK_IDENTIFIER '(' parameters ')' funcbody ';' .  (20)

	.  reduce 20


state 70
	intlist : LIT_INTEGER intlist .  (14)

	.  reduce 14


state 71
	floatlist : LIT_REAL floatlist .  (18)

	.  reduce 18


state 72
	charlist : LIT_CHAR charlist .  (16)

	.  reduce 16


state 73
	control : KW_WHEN '(' expr . ')' KW_THEN cmd  (45)
	control : KW_WHEN '(' expr . ')' KW_THEN cmd KW_ELSE cmd  (46)
	expr : expr . OPERATOR_LE expr  (58)
	expr : expr . OPERATOR_GE expr  (59)
	expr : expr . OPERATOR_EQ expr  (60)
	expr : expr . OPERATOR_NE expr  (61)
	expr : expr . OPERATOR_AND expr  (62)
	expr : expr . OPERATOR_OR expr  (63)
	expr : expr . '*' expr  (64)
	expr : expr . '+' expr  (65)
	expr : expr . '-' expr  (66)
	expr : expr . '/' expr  (67)
	expr : expr . '<' expr  (68)
	expr : expr . '>' expr  (69)

	OPERATOR_LE  shift 79
	OPERATOR_GE  shift 80
	OPERATOR_EQ  shift 81
	OPERATOR_NE  shift 82
	OPERATOR_AND  shift 83
	OPERATOR_OR  shift 84
	'<'  shift 85
	'>'  shift 86
	'-'  shift 87
	'+'  shift 88
	'*'  shift 89
	'/'  shift 90
	')'  shift 96
	.  error


state 74
	control : KW_WHILE '(' expr . ')' cmd  (47)
	expr : expr . OPERATOR_LE expr  (58)
	expr : expr . OPERATOR_GE expr  (59)
	expr : expr . OPERATOR_EQ expr  (60)
	expr : expr . OPERATOR_NE expr  (61)
	expr : expr . OPERATOR_AND expr  (62)
	expr : expr . OPERATOR_OR expr  (63)
	expr : expr . '*' expr  (64)
	expr : expr . '+' expr  (65)
	expr : expr . '-' expr  (66)
	expr : expr . '/' expr  (67)
	expr : expr . '<' expr  (68)
	expr : expr . '>' expr  (69)

	OPERATOR_LE  shift 79
	OPERATOR_GE  shift 80
	OPERATOR_EQ  shift 81
	OPERATOR_NE  shift 82
	OPERATOR_AND  shift 83
	OPERATOR_OR  shift 84
	'<'  shift 85
	'>'  shift 86
	'-'  shift 87
	'+'  shift 88
	'*'  shift 89
	'/'  shift 90
	')'  shift 97
	.  error

